--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,3 +1,4 @@
+auxiliary.org-netbeans-modules-php-smarty.smarty-framework=true
 file.reference.Webdesign-system=../system
 include.path=\
     ${php.global.include.path}:\
