--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
 [submodule "lib/system"]
 	path = lib/system
-	url = git@mojotrollz.eu:webcraft/system.git
+	url = ../system.git
 [submodule "lib/font_awesome"]
 	path = lib/font_awesome
-	url = git@mojotrollz.eu:webcraft/lib_font_awesome.git
+	url = ../lib_font_awesome.git
